project(Poker)
set(CMAKE_CXX_STANDARD 14)
cmake_minimum_required(VERSION 2.8)
aux_source_directory(src SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})

add_subdirectory(media)

IF (WIN32)
    set(SDL2_INCLUDE_DIRS "${CMAKE_PREFIX_PATH}\\include")

    INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})

    find_library(SDL2MAIN_LIBRARIES SDL2main PATHS ${CMAKE_PREFIX_PATH}\\lib\\x86)
    find_library(SDL2_LIBRARIES SDL2 PATHS ${CMAKE_PREFIX_PATH}\\lib\\x86)
    find_library(SDL2IMAGE_LIBRARIES SDL2_image PATHS ${CMAKE_PREFIX_PATH}\\lib\\x86)
    find_library(SDLTTF_LIBRARIES SDL2_ttf PATHS ${CMAKE_PREFIX_PATH}\\lib\\x86)
ELSE()
    INCLUDE(FindPkgConfig)
    PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
    PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
    PKG_SEARCH_MODULE(SDLTTF REQUIRED SDL2_ttf>=2.0.0)

    INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS} ${SDLTTF_INCLUDE_DIRS})
ENDIF()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2MAIN_LIBRARIES} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDLTTF_LIBRARIES})